--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/react": "^17.0.19",
+    "@types/react-native": "^0.64.13",
+    "typescript": "^4.3.5"
   },
   "private": true
 }
